[project]
name = "unshakify"
version = "0.1.0"
description = "AI-based video stabilization with performance indicators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.12.11",
]
